--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="vertical__col">
                             <div class="vertical_item">
                                 <div class="vertical__subitle">Eco</div>
-                                <div class="vertical__label">$999</div>
+                                <div class="vertical__label">1 donut</div>
                                 <div class="vertical__text">Eco Pack</div>
                                 <a href="" class="vertical__btn">Buy</a>
                             </div>
@@ -99,7 +99,7 @@
                         <div class="vertical__col">
                             <div class="vertical_item">
                                 <div class="vertical__subitle">Mid</div>
-                                <div class="vertical__label">$1.999</div>
+                                <div class="vertical__label">2 donuts</div>
                                 <div class="vertical__text">Mid Pack</div>
                                 <a href="" class="vertical__btn">Buy</a>
                             </div>
@@ -107,7 +107,7 @@
                         <div class="vertical__col">
                             <div class="vertical_item">
                                 <div class="vertical__subitle">Max</div>
-                                <div class="vertical__label">$10.999</div>
+                                <div class="vertical__label">3 donuts</div>
                                 <div class="vertical__text">Max Pack</div>
                                 <a href="" class="vertical__btn">Buy</a>
                             </div>
